# cserpent

./: .gitattribute  .gitignore  CMakeCache.txt  CMakeLists.txt  FILE_STRUCTURE.md  LICENSE  README.md  TODO.md  binary_trees.cpp  build.ninja  cmake_install.cmake  compiler.srp  compiler2.srp  run_tests.sh
.github/workflows/: srp-tests.yml
benchmarks/: README.md  Results.xlsx  benchmarks.csv  bm_raytrace.srp  example-report.xlsx  optimization.csv  util.srp
benchmarks/C/: binary-trees.c  matrix-mult.c  nqueen.c  sudoku.c
benchmarks/C++/: binary_trees.cpp  dictionary.cpp  main_benchmark.cpp  matrix_mult.cpp  nqueen.cpp  symbols.cpp
benchmarks/C++/C/: matrix_mult_c.cpp  nqueen_c.cpp
benchmarks/byhand/: CMakeLists.txt  benchmarking_utils.h  binary_trees.cpp  matrix_mult.cpp  nqueen.cpp  symbols.cpp
benchmarks/byhand/simple_array/: README.txt
benchmarks/cpp/: binary_trees_c.cpp
benchmarks/py/: binary-trees.py  binary_trees.py  bm_raytrace.py  main_benchmark.py  matrix-mult.py  matrix_mult.py  nqueen.py  sudoku.py
benchmarks/runner/: runner.cpp
benchmarks/srp/: binary-trees.srp  binary-trees2.srp  bm_raytrace.srp  matrix-mult.srp  matrix_mult.cpp  mini-tree.srp  nqueen.cpp  nqueen.srp  sudoku.srp  symbols.srp
build_dir/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
doc/: funcalls.txt  gc.txt  globals.md  multiplefiles.md  nanboxing.txt  objects.md  parsing.txt  policy.txt  runtime.txt  syntax.txt
doc/old_stuff/: dynamic_dispatch.md  objects.md  stack_array.cpp
doc/runtime_design_decisions/: stack_array.cpp  string.md
gold/: global_vars.cpp  global_vars.h  main.cpp
playground/: indentation.srp  rec.srp
reprtest/: CMakeLists.txt  addone.cpp  any_compare.cpp  any_compare.h
src/: temp_tests.srp
src/Any_v2/: Readme.md  any.cpp  any.h
src/backend/: binary_trees_gen.srp  codegen_visitor.srp  sem-test-toy.py  sem_test_matmul.py  semantic_routines.py  semcheck_visitor.srp  visitor.srp
src/frontend/: ast.srp  compile.srp  file.srp  parser.srp  parser_comb.srp  parser_ctx.srp  token.srp  utils.srp
src/fullstack/: abstract_syntax.py  ast.py  frontend.py  frontend_utils.py  lexer.py  parser.py  parsing_grammar.md
src/fullstack/test_files/: test1.srp
src/gc/: gc.cpp  gc.h
src/runtime/: CMakeLists.txt  Makefile  Readme.md  any.cpp  any.h  any_utils.cpp  any_utils.h  array.cpp  array.h  basic_obj.cpp  basic_obj.h  builtin_functions.cpp  builtin_functions.h  cserpent.h  csmem.cpp  csmem.h  csstring.cpp  csstring.h  design_decisions.txt  dict.cpp  dictionary.cpp  dictionary.h  heap_obj.cpp  heap_obj.h  main.cpp  obj.cpp  obj.h  op_overload.cpp  op_overload.h  operator_overloading.cpp  runtime.cpp  runtime.h  symbol.cpp  symbol.h  symbol_table.cpp  symbol_table.h
src/runtime/Any_v2/: Readme.md  any.cpp  any.h  array.h  main.cpp
src/runtime/builtin_functions/: builtin_functions.cpp  builtin_functions.h
src/runtime/data_structures/: array.cpp  array.h  array_raw.h  char_sequence.cpp  char_sequence.h  csstring.cpp  csstring.h  design_decisions.txt  dict.cpp  dict.h  dictionary.cpp  dictionary.h  string.cpp  string.h  symbol.cpp  symbol.h
src/runtime/data_structures/csstring_v1/: csstring.h  test_string_v1.cpp
src/runtime/data_structures/old/: symbol_old.cpp  symbol_old.h
src/runtime/design_decisions/: string.md
src/runtime/globals/: symbol_table.cpp  symbol_table.h
src/runtime/test/: CMakeLists.txt  binary_trees_test.cpp  dictionary.cpp  dictionary_test.cpp  main_test.cpp  memtest.cpp  test_string.cpp
tests/c++/reprtest/: README.txt
tests/c++/runtime/: array_test.cpp  cpptest.cpp  dictionary_test.cpp  gctest.cpp  main_test.cpp  memtest.cpp  test_string.cpp  test_string_any.cpp  testing.md  virtual_test.cpp
tests/serpent/behavior/: scope.srp
tests/serpent/full_pipeline/: account.srp  arrays.srp  classes_require.srp  dictionaries.srp  hofs.srp  named_account.srp  omitted.txt  optargs.srp  strings.srp  various_fors.srp
tests/serpent/full_pipeline/extras/: named_account.srp
tests/serpent/includes/cyclic/: a.srp  b.srp  main.srp
tests/serpent/parser/: codegen.srp  exp.srp  print.srp
tests/serpent/simple/: array.srp  easyglobal-global_vars.cpp-manual  easyglobal-main.cpp-manual  easyglobal.cpp-manual  easyglobal.srp  easyglobaltypes.srp  forloop.srp  string.srp
tests/serpent/simple/easyglobal/: CMakeLists.txt  easyglobal.cpp  easyglobal.h  global_vars.cpp  global_vars.h  main.cpp
toolchain/: srp_tests.py
